# guidelines-faster-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
