[project]
name = "faster-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beam-client>=0.2.174",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-groq>=0.4.0",
    "pymilvus>=2.4.9",
    "streamlit>=1.47.1",
]
